--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3",
@@ -53,7 +55,9 @@
     "@storybook/node-logger": "^6.0.27",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.27",
+    "@types/faker": "^5.1.3",
     "babel-loader": "^8.1.0",
+    "faker": "^5.1.0",
     "react-is": "^17.0.1"
   }
 }
