--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.53",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.3.0",
     "formik": "^2.2.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
