--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react-dom": "^16.9.8",
     "@types/uuid": "^8.3.0",
     "formik": "^2.2.1",
+    "i18next": "^19.8.3",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.7.3",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3",
     "uuid": "^8.3.1",
