--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/uuid": "^8.3.0",
     "formik": "^2.2.1",
     "i18next": "^19.8.3",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
