--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-kanban",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lukasgillmann.github.io/kg-kanban",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -56,7 +57,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": ".",
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@storybook/addon-actions": "^6.0.27",
